kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: istiokeycloak
  labels:
    app: istiokeycloak
    service: istiokeycloak
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: istiokeycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istiokeycloak-v1
  labels:
    app: istiokeycloak
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istiokeycloak
      version: v1
  template:
    metadata:
      labels:
        app: istiokeycloak
        version: v1
    spec:
      serviceAccountName: account-istiokeycloak
      containers:
        - name: istiokeycloak
          image: docker.io/shadrachjabonir/istiokeycloak
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
