istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istiokeycloak-gateway
  namespace: istioinject
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istiokeycloak
  namespace: istioinject
spec:
  hosts:
    - "*"
  gateways:
    - istiokeycloak-gateway
  http:
  - match:
    - uri:
        prefix: /greetings
    - uri:
        prefix: /
    route:
    - destination:
        host: istiokeycloak
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istiokeycloak
  namespace: istioinject
spec:
  host: istiokeycloak
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: istiokeycloak-req-auth
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
    - issuer: "https://keycloak.192.168.99.103.nip.io/auth/realms/istio"
      jwksUri: "http://192.168.99.103:30154/auth/realms/istio/protocol/openid-connect/certs"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: istioinject
spec:
  selector:
    matchLabels:
      app: istiokeycloak
  action: DENY
  rules:
    - from:
        - source:
            notRequestPrincipals: ["*"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-in-cluster-and-authenticated
  namespace: istioinject
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["*"]
        - source:
            requestPrincipals: ["*"]
---
#apiVersion: security.istio.io/v1beta1
#kind: AuthorizationPolicy
#metadata:
#  name: istiokeycloak-req-jwt
#spec:
#  selector:
#    matchLabels:
#      app: istiokeycloak
#  action: ALLOW
#  rules:
#    - from:
#        - source:
#            requestPrincipals: ["https://keycloak.192.168.99.103.nip.io/auth/realms/istio/"]
---
#apiVersion: security.istio.io/v1beta1
#kind: AuthorizationPolicy
#metadata:
#  name: ingress-auth-deny
#  namespace: istio-system
#spec:
#  selector:
#    matchLabels:
#      istio: ingressgateway
#  action: DENY
#  rules:
#    - from:
#        - source:
#            notRequestPrincipals: ["*"]
---
#apiVersion: security.istio.io/v1beta1
#kind: AuthorizationPolicy
#metadata:
#  name: ingress-auth-allow
#  namespace: istio-system
#spec:
#  selector:
#    matchLabels:
#      istio: ingressgateway
#  action: ALLOW
#  rules:
#    - from:
#        - source:
#            requestPrincipals: [http://keycloak:31198/auth/realms/istio/]
---
